@@ -1,5 +1,6 @@
 {% load i18n creme_widgets creme_ctype %}
-{% ctype_for_model model as ctype %}
+{% with ctype=model|ctype_for_instance %}
 <a class="with-icon" href="{% url 'creme_core__batch_process' ctype.id %}{% if list_view_state.entity_filter_id %}?efilter={{list_view_state.entity_filter_id}}{% endif %}" title="{% translate 'Apply some treatments (like making the name uppercase) on many entities at once' %}">
     {% translate 'Batch process' as label %}{% widget_icon name='batch_process' label=label size='listview-button' %}{{label}}
 </a>
+{% endwith %}
